--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <!-- html2pdf.js for PDF Generation -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <!-- D3.js for Visualization -->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
 <script type="importmap">
